Update for deployment

--- a/.ebextensions/01-launch-template.config
+++ b/.ebextensions/01-launch-template.config
@@ -3,5 +3,5 @@ Resources:
     Type: "AWS::AutoScaling::AutoScalingGroup"
     Properties:
       LaunchTemplate:
-        LaunchTemplateId: "your-launch-template-id"   # 생성한 Launch Template ID
+        LaunchTemplateId: "lt-0e306d00a11ce7267"   # 생성한 Launch Template ID
         Version: "1"                                  # 사용할 버전 번호
